--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "couchapp": "0.10.*",
+    "couchapp": "*",
     "grunt": "~0.3.12",
     "nano": "3.3.0"
   },
